--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 			<tr>
 			<td width="40%" id="round">
-				<img id="kk" src="https://smh13.carrd.co/assets/images/image01.jpg?v=c92e8aa2">
+				<img id="kk" src="https://smh13.carrd.co/assets/images/image01.jpg?v=f05c982c">
 			</td>
 
 			<td width="60%">
@@ -90,6 +90,9 @@
 					  
 					<div class="flip-card-front">
 						  <h1>Skills</h1>
+						  <h1>Hover to know more</h1>
+						  <h1>.</h1>
+						  <h1>.</h1>
 					</div>
 					<div class="flip-card-back">
 						<p>
@@ -137,9 +140,9 @@
 				<br>
 				<br>
 				<br>
-				<li><a href="https://github.com/smh13/Nyka02"><i class="fa-solid fa-file-code"></i> Code</a></li>
-				<li><a href="https://sparkling-liger-c4a2fc.netlify.app">Live</a></li>
-				<li><a href="https://medium.com/@hashmisyedmustafa13/my-experience-on-construct-week-2-on-my-masai-journey-cloning-nykaa-in-5-days-3c5d4886dac5">Read More</a></li>
+				<li><button class="button4"><a href="https://github.com/smh13/Nyka02"><i class="fa-solid fa-file-code"></i> Code</a></button></li>
+				<li><button class="button4"><a href="https://sparkling-liger-c4a2fc.netlify.app">Live</a></button></li>
+				<li><button class="button4"><a href="https://medium.com/@hashmisyedmustafa13/my-experience-on-construct-week-2-on-my-masai-journey-cloning-nykaa-in-5-days-3c5d4886dac5">Read More</a></button></li>
 				<hr>
 				<li>	
 					<b>Bath And BodyWorks</b>
@@ -153,9 +156,9 @@
 				<br>
 				<br>
 				<br>
-				<li><a href="https://github.com/smh13/Final_project">Code</a></li>
-				<li><a href="">Live</a></li>
-				<li><a href="https://medium.com/@hashmisyedmustafa13/this-is-a-small-blog-about-the-bathandbodyworks-website-i-designed-as-my-final-Projects-of-unit-2-4c9d27df67c5">Read More</a></li>
+				<li><button class="button4"><a href="https://github.com/smh13/Final_project">Code</a></button></li>
+				<li><button class="button4"><a href="">Live</a></button></li>
+				<li><button class="button4"><a href="https://medium.com/@hashmisyedmustafa13/this-is-a-small-blog-about-the-bathandbodyworks-website-i-designed-as-my-final-Projects-of-unit-2-4c9d27df67c5">Read More</a></button></li>
 					
 				</ul>
 				</font>
