--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 				<br>
 				<br>
 				<li><button class="button4"><a href="https://github.com/smh13/Final_project">Code</a></button></li>
-				<li><button class="button4"><a href="">Live</a></button></li>
+				<li><button class="button4"><a href="https://darling-cupcake-8a6fbe.netlify.app">Live</a></button></li>
 				<li><button class="button4"><a href="https://medium.com/@hashmisyedmustafa13/this-is-a-small-blog-about-the-bathandbodyworks-website-i-designed-as-my-final-Projects-of-unit-2-4c9d27df67c5">Read More</a></button></li>
 					
 				</ul>
