--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Chewy&family=Sacramento&family=Style+Script&display=swap" rel="stylesheet">
-	
+	<link rel="stylesheet" href="path/to/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -84,29 +85,18 @@
 
 <div id="a">
 	<div id="b">
-		<td width="60%">
-			<div class="flip-card">
-				  <div class="flip-card-inner">
-					  
-					<div class="flip-card-front">
-						  <h1>Skills</h1>
-						  <h1>Hover to know more</h1>
-						  <h1>.</h1>
-						  <h1>.</h1>
-					</div>
-					<div class="flip-card-back">
-						<p>
-							<ul>
-								<li>HTML</li>
-								<li>CSS</li>
-								<li>JAVASCRIPT</li>
-								<li>React</li>
-							</ul>
-					</p>
-					</div>
-				  </div>
-			</div>
-		</td>
+		<h1>Front End Skills</h1>
+		<li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/768px-HTML5_logo_and_wordmark.svg.png?20170517184425" alt="" height="25px" width="25px"> Html</li>
+		<li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/Css-versicherung-logo.svg/640px-Css-versicherung-logo.svg.png" alt="" height="25px" width="25px"> Css</li>
+		<li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Javascript_Logo.png/640px-Javascript_Logo.png" alt="" height="25px" width="25px"> Javascript</li>
+		<li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/640px-React-icon.svg.png" alt="" height="25px" width="25px"> React</li>
+	</div>
+	<div id="c">
+		<h1>Back End Skills</h1>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
 	</div>
 </div>
 <!--skills(end)-->
