--- a/index.html
+++ b/index.html
@@ -86,17 +86,19 @@
 <div id="a">
 	<div id="b">
 		<h1>Front End Skills</h1>
-		<li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/768px-HTML5_logo_and_wordmark.svg.png?20170517184425" alt="" height="25px" width="25px"> Html</li>
-		<li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/Css-versicherung-logo.svg/640px-Css-versicherung-logo.svg.png" alt="" height="25px" width="25px"> Css</li>
-		<li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Javascript_Logo.png/640px-Javascript_Logo.png" alt="" height="25px" width="25px"> Javascript</li>
-		<li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/640px-React-icon.svg.png" alt="" height="25px" width="25px"> React</li>
+		<ul><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/768px-HTML5_logo_and_wordmark.svg.png?20170517184425" alt="" height="25px" width="25px"> Html</ul>
+		<ul><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/Css-versicherung-logo.svg/640px-Css-versicherung-logo.svg.png" alt="" height="25px" width="25px"> Css</ul>
+		<ul><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Javascript_Logo.png/640px-Javascript_Logo.png" alt="" height="25px" width="25px"> Javascript</ul>
+		<ul><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/640px-React-icon.svg.png" alt="" height="25px" width="25px"> React</ul>
 	</div>
 	<div id="c">
 		<h1>Back End Skills</h1>
-		<li></li>
-		<li></li>
-		<li></li>
-		<li></li>
+		<ul></ul>
+		<ul></ul>
+		<ul></ul>
+		<ul></ul>
+		<ul></ul>
+		<ul></ul>
 	</div>
 </div>
 <!--skills(end)-->
