--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
 				<br>
 				<br>
 				<br>
-				<li><button class="button4"><a href="https://github.com/smh13/Nyka02"><i class="fa-solid fa-file-code"></i> Code</a></button></li>
-				<li><button class="button4"><a href="https://sparkling-liger-c4a2fc.netlify.app">Live</a></button></li>
-				<li><button class="button4"><a href="https://medium.com/@hashmisyedmustafa13/my-experience-on-construct-week-2-on-my-masai-journey-cloning-nykaa-in-5-days-3c5d4886dac5">Read More</a></button></li>
+				<ul><button class="button4"><a href="https://github.com/smh13/Nyka02" target="_blank"><i class="fa-solid fa-file-code"></i> Code</a></button></ul>
+				<ul><button class="button4"><a href="https://sparkling-liger-c4a2fc.netlify.app" target="_blank">Live</a></button></ul>
+				<ul><button class="button4"><a href="https://medium.com/@hashmisyedmustafa13/my-experience-on-construct-week-2-on-my-masai-journey-cloning-nykaa-in-5-days-3c5d4886dac5" target="_blank">Read More</a></button></ul>
 				<hr>
 				<li>	
 					<b>Bath And BodyWorks</b>
@@ -146,9 +146,9 @@
 				<br>
 				<br>
 				<br>
-				<li><button class="button4"><a href="https://github.com/smh13/Final_project">Code</a></button></li>
-				<li><button class="button4"><a href="https://darling-cupcake-8a6fbe.netlify.app">Live</a></button></li>
-				<li><button class="button4"><a href="https://medium.com/@hashmisyedmustafa13/this-is-a-small-blog-about-the-bathandbodyworks-website-i-designed-as-my-final-Projects-of-unit-2-4c9d27df67c5">Read More</a></button></li>
+				<ul><button class="button4"><a href="https://github.com/smh13/Final_project"  target="_blank">Code</a></button></ul>
+				<ul><button class="button4"><a href="https://resplendent-trifle-034b88.netlify.app/"  target="_blank">Live</a></button></ul>
+				<ul><button class="button4"><a href="https://medium.com/@hashmisyedmustafa13/this-is-a-small-blog-about-the-bathandbodyworks-website-i-designed-as-my-final-Projects-of-unit-2-4c9d27df67c5"  target="_blank">Read More</a></button></ul>
 					
 				</ul>
 				</font>
@@ -171,10 +171,8 @@
 
 	<footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge w3-center">
 		<h1>Contact Me</h1>
-		<a href="hashmisyedmustafa13@gmail.com"><i class="fa fa-envelope w3-hover-opacity"style="font-size:24px"></i></a>
-		<a href="www.linkedin.com/in/smh98"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
-		<a href="https://github.com/smh13"><i class="fa fa-github w3-hover-opacity"></i></a>
-		
+		<a href="https://www.linkedin.com/in/syed-mustafa-hashmi-923297150" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+		<a href="https://github.com/smh13"  target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
 		<h2>hashmisyedmustafa13@gmail.com</h2>
 		</td>
 	</tr>
